force-app/main/default/objects/Animal__c/Animal__c.object-meta.xml
<CustomObject>
    <description>This object will house all the details related to animals related to a case</description>
    <label>Animal</label>
    <nameField>
        <label>Animal ID #</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Animals</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>