force-app/main/default/objects/Animal__c/fields/AAH_ID__c.field-meta.xml
<CustomField>
    <fullName>AAH_ID__c</fullName>
    <label>AAH ID #</label>
    <length>100</length>
    <type>Text</type>
</CustomField>