force-app/main/default/objects/Animal__c/fields/Active_Animal__c.field-meta.xml
<CustomField>
    <fullName>Active_Animal__c</fullName>
    <formula>IF(AND(ISBLANK(Final_Outcome__c),Current_Location__c  &lt;&gt; &quot;NYPD Freezer&quot;,Current_Location__c &lt;&gt; &quot;NYPD Refrigerator&quot;),True,False)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Active Animal</label>
    <type>Checkbox</type>
</CustomField>