force-app/main/default/objects/Animal__c/fields/Active_Animal_False__c.field-meta.xml
<CustomField>
    <fullName>Active_Animal_False__c</fullName>
    <formula>IF(AND(ISBLANK(Final_Outcome__c),Current_Location__c &lt;&gt; &quot;NYPD Freezer&quot;,Current_Location__c &lt;&gt; &quot;NYPD Refrigerator&quot;),0,1)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Active Animal False</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>