force-app/main/default/objects/Animal__c/fields/Addendum__c.field-meta.xml
<CustomField>
    <fullName>Addendum__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Check box if yes.</inlineHelpText>
    <label>Addendum</label>
    <type>Checkbox</type>
</CustomField>