force-app/main/default/objects/Animal__c/fields/Administered_Microchip_Number__c.field-meta.xml
<CustomField>
    <fullName>Administered_Microchip_Number__c</fullName>
    <inlineHelpText>Data field only pertains to microchips that the ASPCA administered.</inlineHelpText>
    <label>Administered Microchip Number</label>
    <length>25</length>
    <type>Text</type>
</CustomField>