force-app/main/default/objects/Animal__c/fields/Age__c.field-meta.xml
<CustomField>
    <fullName>Age__c</fullName>
    <label>Age Estimate at Intake</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Type_of_Animal__c</controllingField>
        <restricted>true</restricted>
        <valueSetName>Age_Estimate_at_Intake</valueSetName>
    </valueSet>
</CustomField>