force-app/main/default/objects/Animal__c/fields/AGE_CD__c.field-meta.xml
<CustomField>
    <fullName>AGE_CD__c</fullName>
    <formula>CASE( Age__c , 
&quot;&quot;, &quot;&quot;,
&quot;0-4 weeks&quot;, &quot;A&quot;, 
&quot;4-8 weeks&quot;, &quot;B&quot;,
&quot;8-12 weeks&quot;, &quot;B&quot;,
&quot;12-16 weeks&quot;, &quot;B&quot;,
&quot;4-6 months&quot;, &quot;B&quot;
,&quot;C&quot;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>AGE CD</label>
    <type>Text</type>
</CustomField>