force-app/main/default/objects/Animal__c/fields/All_Problem_Behaviors__c.field-meta.xml
<CustomField>
    <fullName>All_Problem_Behaviors__c</fullName>
    <label>All Problem Behaviors</label>
    <length>2768</length>
    <type>LongTextArea</type>
</CustomField>