force-app/main/default/objects/Animal__c/fields/Animal_Age__c.field-meta.xml
<CustomField>
    <fullName>Animal_Age__c</fullName>
    <label>Animal Age</label>
    <precision>2</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>