force-app/main/default/objects/Animal__c/fields/Animal_Age_Units__c.field-meta.xml
<CustomField>
    <fullName>Animal_Age_Units__c</fullName>
    <label>Animal Age Units</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Days</fullName>
            </value>
            <value>
                <fullName>Weeks</fullName>
            </value>
            <value>
                <fullName>Months</fullName>
            </value>
            <value>
                <fullName>Years</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>