force-app/main/default/objects/Animal__c/fields/Animal_Age_Units_Changed_Date__c.field-meta.xml
<CustomObject>
<fields>
    <fullName>Animal_Age_Units_Changed_Date__c</fullName>
    <defaultValue>TODAY()</defaultValue>
    <description>The last date the animal age fields that are based on units (rather than estimated DOB) have been updated.</description>
    <label>Animal Age Units Changed Date</label>
    <type>Date</type>
</fields>
</CustomObject>