force-app/main/default/objects/Animal__c/fields/Animal_Auto_ID__c.field-meta.xml
<CustomField>
    <fullName>Animal_Auto_ID__c</fullName>
    <displayFormat>{0}</displayFormat>
    <label>Animal Auto ID</label>
    <type>AutoNumber</type>
</CustomField>