force-app/main/default/objects/Animal__c/fields/Animal_Case__c.field-meta.xml
<CustomField>
    <fullName>Animal_Case__c</fullName>
    <formula>Case__r.NYPD_Complaint_Number__c &amp; IF( ISBLANK(Animal_Name__c) ,&quot;&quot;, &quot; &quot;&amp;Animal_Name__c)&amp;IF(ISBLANK( Original_Animal_Name__c),&quot;&quot;,&quot; &quot;&amp;Original_Animal_Name__c)&amp;&apos; &apos;&amp; Case__r.ACIS_Case_Number__c</formula>
    <label>Animal/Case #</label>
    <type>Text</type>
</CustomField>