force-app/main/default/objects/Animal__c/fields/Animal_Counter__c.field-meta.xml
<CustomField>
    <fullName>Animal_Counter__c</fullName>
    <label>Animal Counter</label>
    <length>20</length>
    <type>Text</type>
</CustomField>