force-app/main/default/objects/Animal__c/fields/Animal_Disposition_Final_Location__c.field-meta.xml
<CustomField>
    <fullName>Animal_Disposition_Final_Location__c</fullName>
    <label>Animal Disposition/Final Location</label>
    <length>80</length>
    <type>Text</type>
</CustomField>