force-app/main/default/objects/Animal__c/fields/Animal_Field_ID__c.field-meta.xml
<CustomField>
    <fullName>Animal_Field_ID__c</fullName>
    <label>Animal Field ID</label>
    <length>80</length>
    <type>Text</type>
</CustomField>