force-app/main/default/objects/Animal__c/fields/Animal_Formula__c.field-meta.xml
<CustomField>
    <fullName>Animal_Formula__c</fullName>
    <formula>IF(NOT(ISBLANK(Animal_Name__c)), Animal_Name__c &amp; &quot; (ASPCA) - &quot; &amp; TEXT(Type_of_Animal__c),  Original_Animal_Name__c &amp; &quot; (Original) - &quot; &amp; TEXT(Type_of_Animal__c))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Animal</label>
    <type>Text</type>
</CustomField>