force-app/main/default/objects/Animal__c/fields/Animal_ID__c.field-meta.xml
<CustomField>
    <fullName>Animal_ID__c</fullName>
    <formula>CASESAFEID(Id)</formula>
    <label>Animal ID</label>
    <type>Text</type>
</CustomField>