force-app/main/default/objects/Animal__c/fields/Animal_Name__c.field-meta.xml
<CustomField>
    <fullName>Animal_Name__c</fullName>
    <externalId>true</externalId>
    <label>ASPCA Animal Name</label>
    <length>35</length>
    <type>Text</type>
</CustomField>