force-app/main/default/objects/Animal__c/fields/Animal_Name_Id__c.field-meta.xml
<CustomField>
    <fullName>Animal_Name_Id__c</fullName>
    <formula>Animal_Name__c + &apos; (&apos; +  Name + &apos;)&apos;</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Animal Name/Id</label>
    <type>Text</type>
</CustomField>