force-app/main/default/objects/Animal__c/fields/Animal_Status__c.field-meta.xml
<CustomField>
    <fullName>Animal_Status__c</fullName>
    <description>Required field - needed for statistics/reporting purposes</description>
    <inlineHelpText>Required field - needed for statistics/reporting purposes</inlineHelpText>
    <label>Animal Status</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Died In Field (Must update discharge details)</fullName>
            </value>
            <value>
                <fullName>Died In Shelter (Must update discharge details)</fullName>
            </value>
            <value>
                <fullName>Discharged</fullName>
            </value>
            <value>
                <fullName>Euthanized</fullName>
            </value>
            <value>
                <fullName>In Boarding</fullName>
            </value>
            <value>
                <fullName>In Field</fullName>
            </value>
            <value>
                <fullName>In Foster Care</fullName>
            </value>
            <value>
                <fullName>In Shelter</fullName>
                <default>true</default>
                <label>In Shelter</label>
            </value>
            <value>
                <fullName>Jurisdiction&apos;s Animal Shelter</fullName>
            </value>
            <value>
                <fullName>Jurisdiction&apos;s Off-site location</fullName>
            </value>
            <value>
                <fullName>Offsite Veterinarian</fullName>
            </value>
            <value>
                <fullName>Other Animal Shelter</fullName>
            </value>
            <value>
                <fullName>Disaster Animal</fullName>
            </value>
            <value>
                <fullName>NYPD Animal</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>