force-app/main/default/objects/Animal__c/fields/Approved_for_Revolution__c.field-meta.xml
<CustomField>
    <fullName>Approved_for_Revolution__c</fullName>
    <label>Approved for Revolution?</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>