force-app/main/default/objects/Animal__c/fields/ASPCA_Intake_Date__c.field-meta.xml
<CustomField>
    <fullName>ASPCA_Intake_Date__c</fullName>
    <label>ASPCA Intake Date</label>
    <summarizedField>Facility_Outcome__c.Start_Date__c</summarizedField>
    <summaryFilterItems>
        <field>Facility_Outcome__c.Facility_Outcome__c</field>
        <operation>equals</operation>
        <value>AAH, Adoption Center, ARC, CARE</value>
    </summaryFilterItems>
    <summaryForeignKey>Facility_Outcome__c.Animal__c</summaryForeignKey>
    <summaryOperation>min</summaryOperation>
    <type>Summary</type>
</CustomField>