force-app/main/default/objects/Animal__c/fields/Behavior_Case_Worker__c.field-meta.xml
<CustomField>
    <fullName>Behavior_Case_Worker__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Behavior Case Worker</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Animals (Behavior Case Worker)</relationshipLabel>
    <relationshipName>Beh_Case_Worker_Animals</relationshipName>
    <type>Lookup</type>
</CustomField>