force-app/main/default/objects/Animal__c/fields/Behavior_Class__c.field-meta.xml
<CustomField>
    <fullName>Behavior_Class__c</fullName>
    <label>Behavior Class</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Aggressive - See Note</fullName>
            </value>
            <value>
                <fullName>Agressive to Cats - See Note</fullName>
            </value>
            <value>
                <fullName>Friendly</fullName>
            </value>
            <value>
                <fullName>Frightened - See Note</fullName>
            </value>
            <value>
                <fullName>Has Bitten - See Note</fullName>
            </value>
            <value>
                <fullName>Has Scratched - See Note</fullName>
            </value>
            <value>
                <fullName>High Energy</fullName>
            </value>
            <value>
                <fullName>Unspecified</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>