force-app/main/default/objects/Animal__c/fields/Behavior_Concern_Notes__c.field-meta.xml
<CustomField>
    <fullName>Behavior_Concern_Notes__c</fullName>
    <label>Kennel Card Behavior Concern Notes</label>
    <length>2768</length>
    <type>LongTextArea</type>
</CustomField>