force-app/main/default/objects/Animal__c/fields/Behavior_Concerns__c.field-meta.xml
<CustomField>
    <fullName>Behavior_Concerns__c</fullName>
    <label>Behavior Concerns</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Shy in Kennel</fullName>
            </value>
            <value>
                <fullName>Mouthy</fullName>
            </value>
            <value>
                <fullName>Dog Reactive</fullName>
            </value>
            <value>
                <fullName>Small Dogs</fullName>
            </value>
            <value>
                <fullName>Strangers</fullName>
            </value>
            <value>
                <fullName>Novelty</fullName>
            </value>
            <value>
                <fullName>Fearfull Outdoors</fullName>
            </value>
            <value>
                <fullName>Men</fullName>
            </value>
            <value>
                <fullName>Women</fullName>
            </value>
            <value>
                <fullName>Children</fullName>
            </value>
            <value>
                <fullName>RG Food/Objects</fullName>
            </value>
            <value>
                <fullName>Handling Issues</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>