force-app/main/default/objects/Animal__c/fields/Behavior_Hold_Release_Date__c.field-meta.xml
<CustomField>
    <fullName>Behavior_Hold_Release_Date__c</fullName>
    <label>Behavior Hold Release Date</label>
    <type>Date</type>
</CustomField>