force-app/main/default/objects/Animal__c/fields/Behavior_Medication_Data_Time__c.field-meta.xml
<CustomField>
    <fullName>Behavior_Medication_Data_Time__c</fullName>
    <description>This field captures the data time whenever the behavior medication flag is checked</description>
    <label>Behavior Medication Data/Time</label>
    <type>DateTime</type>
</CustomField>