force-app/main/default/objects/Animal__c/fields/Behavior_Medication_Flag__c.field-meta.xml
<CustomField>
    <fullName>Behavior_Medication_Flag__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Behavior Medication Flag</label>
    <type>Checkbox</type>
</CustomField>