force-app/main/default/objects/Animal__c/fields/Behavior_Medication_Notes__c.field-meta.xml
<CustomField>
    <fullName>Behavior_Medication_Notes__c</fullName>
    <label>Behavior Medication Notes</label>
    <length>2768</length>
    <type>LongTextArea</type>
</CustomField>