force-app/main/default/objects/Animal__c/fields/Behavior_Placement_Status__c.field-meta.xml
<CustomField>
    <fullName>Behavior_Placement_Status__c</fullName>
    <label>Current Behavior Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Behavior Hold</fullName>
            </value>
            <value>
                <fullName>Needs Evaluation</fullName>
            </value>
            <value>
                <fullName>Behavior Reassessment</fullName>
            </value>
            <value>
                <fullName>Cleared – Placement Summary Complete</fullName>
            </value>
            <value>
                <fullName>Cleared – Placement Summary Needed</fullName>
            </value>
            <value>
                <fullName>Placement Partner OK - Foster</fullName>
                <isActive>false</isActive>
                <label>Placement Partner OK - Foster</label>
            </value>
            <value>
                <fullName>Placement Partner OK - Foster-based Rescue</fullName>
                <isActive>false</isActive>
                <label>Placement Partner OK - Foster-based Rescue</label>
            </value>
            <value>
                <fullName>Placement Partner OK - Shelter with Behavior Dept.</fullName>
                <isActive>false</isActive>
                <label>Placement Partner OK - Shelter with Behavior Dept.</label>
            </value>
            <value>
                <fullName>Ready for Placement</fullName>
                <isActive>false</isActive>
                <label>Ready for Placement</label>
            </value>
            <value>
                <fullName>Rehab Candidate</fullName>
                <isActive>false</isActive>
                <label>Rehab Candidate</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>