force-app/main/default/objects/Animal__c/fields/Behavior_Play_Pause__c.field-meta.xml
<CustomField>
    <fullName>Behavior_Play_Pause__c</fullName>
    <label>Behavior Play Pause</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Aggression</fullName>
            </value>
            <value>
                <fullName>Low Energy</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>