force-app/main/default/objects/Animal__c/fields/Behavior_Play_Pause_Date__c.field-meta.xml
<CustomField>
    <fullName>Behavior_Play_Pause_Date__c</fullName>
    <label>Behavior Play Pause Date</label>
    <type>Date</type>
</CustomField>