force-app/main/default/objects/Animal__c/fields/Behavior_Play_Pause_Options__c.field-meta.xml
<CustomField>
    <fullName>Behavior_Play_Pause_Options__c</fullName>
    <label>Behavior Play Pause Options</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Recheck in 2 weeks</fullName>
            </value>
            <value>
                <fullName>Recheck in 1 month</fullName>
            </value>
            <value>
                <fullName>Recheck in 2 months</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>