force-app/main/default/objects/Animal__c/fields/Behavior_Play_Pause_Reason__c.field-meta.xml
<CustomField>
    <fullName>Behavior_Play_Pause_Reason__c</fullName>
    <label>Behavior Play Pause Reason</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>