force-app/main/default/objects/Animal__c/fields/Behavior_Summary__c.field-meta.xml
<CustomField>
    <fullName>Behavior_Summary__c</fullName>
    <label>Placement Summary</label>
    <length>3000</length>
    <type>LongTextArea</type>
</CustomField>