force-app/main/default/objects/Animal__c/fields/Behavior_Summary_Change_Date__c.field-meta.xml
<CustomField>
    <fullName>Behavior_Summary_Change_Date__c</fullName>
    <defaultValue>TODAY()</defaultValue>
    <label>Placement Summary Change Date</label>
    <type>Date</type>
</CustomField>