force-app/main/default/objects/Animal__c/fields/Behavior_Summary_Initials__c.field-meta.xml
<CustomField>
    <fullName>Behavior_Summary_Initials__c</fullName>
    <label>Placement Summary Initials</label>
    <length>10</length>
    <type>Text</type>
</CustomField>