force-app/main/default/objects/Animal__c/fields/Behavioral_Notes__c.field-meta.xml
<CustomField>
    <fullName>Behavioral_Notes__c</fullName>
    <label>Behavioral Notes</label>
    <length>2000</length>
    <type>LongTextArea</type>
</CustomField>