force-app/main/default/objects/Animal__c/fields/Bergh_Animal_Tracking_Number__c.field-meta.xml
<CustomField>
    <fullName>Bergh_Animal_Tracking_Number__c</fullName>
    <label>Bergh Animal Tracking Number</label>
    <length>80</length>
    <type>Text</type>
</CustomField>