force-app/main/default/objects/Animal__c/fields/Bite_History__c.field-meta.xml
<CustomField>
    <fullName>Bite_History__c</fullName>
    <label>Bite History</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
            <value>
                <fullName>Unknown</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>