force-app/main/default/objects/Animal__c/fields/Bite_History_Notes__c.field-meta.xml
<CustomField>
    <fullName>Bite_History_Notes__c</fullName>
    <label>Bite History Notes</label>
    <length>2000</length>
    <type>LongTextArea</type>
</CustomField>