force-app/main/default/objects/Animal__c/fields/Box_Folder__c.field-meta.xml
<CustomField>
    <fullName>Box_Folder__c</fullName>
    <label>Box Folder</label>
    <type>Url</type>
</CustomField>