force-app/main/default/objects/Animal__c/fields/BRC_Animal_Name__c.field-meta.xml
<CustomField>
    <fullName>BRC_Animal_Name__c</fullName>
    <label>BRC Animal Name</label>
    <length>50</length>
    <type>Text</type>
</CustomField>