force-app/main/default/objects/Animal__c/fields/BRC_Candidate_Survey__c.field-meta.xml
<CustomField>
    <fullName>BRC_Candidate_Survey__c</fullName>
    <defaultValue>&quot;https://www.surveymonkey.com/r/ASPCABehavioralRehabCenter_BehaviorSurvey&quot;</defaultValue>
    <label>BRC Candidate Survey</label>
    <type>Url</type>
</CustomField>