force-app/main/default/objects/Animal__c/fields/BRC_Candidate_Survey_Completed__c.field-meta.xml
<CustomField>
    <fullName>BRC_Candidate_Survey_Completed__c</fullName>
    <defaultValue>false</defaultValue>
    <label>BRC Candidate Survey Completed</label>
    <type>Checkbox</type>
</CustomField>