force-app/main/default/objects/Animal__c/fields/BRC_ID__c.field-meta.xml
<CustomField>
    <fullName>BRC_ID__c</fullName>
    <label>BRC  ID #</label>
    <length>50</length>
    <type>Text</type>
</CustomField>