force-app/main/default/objects/Animal__c/fields/Breed__c.field-meta.xml
<CustomField>
    <fullName>Breed__c</fullName>
    <description>For EQUINE, see Help Text</description>
    <inlineHelpText>For EQUINE, choose one of the following: Horse, Donkey, Mule, Draft Horse, Mini Horse, Pony, Mini Mule, Mini Donkey</inlineHelpText>
    <label>Breed</label>
    <length>100</length>
    <type>Text</type>
</CustomField>