force-app/main/default/objects/Animal__c/fields/Breeds_Combined__c.field-meta.xml
<CustomField>
    <fullName>Breeds_Combined__c</fullName>
    <formula>IF(ISBLANK(TEXT(Primary_Breed__c)),  Breed__c, (TEXT(Primary_Breed__c) &amp; &quot; / &quot; &amp;  TEXT(Secondary_Breed__c)))</formula>
    <label>Breeds</label>
    <type>Text</type>
</CustomField>