force-app/main/default/objects/Animal__c/fields/Case_Type1__c.field-meta.xml
<CustomField>
    <fullName>Case_Type1__c</fullName>
    <label>Case Type1</label>
    <length>100</length>
    <type>Text</type>
</CustomField>