force-app/main/default/objects/Animal__c/fields/Cause_for_Delayed_Return__c.field-meta.xml
<CustomField>
    <fullName>Cause_for_Delayed_Return__c</fullName>
    <label>Cause for Delayed Return</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Spay/Neuter</fullName>
            </value>
            <value>
                <fullName>Dental</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>