force-app/main/default/objects/Animal__c/fields/Cause_for_Delayed_Return_Other__c.field-meta.xml
<CustomField>
    <fullName>Cause_for_Delayed_Return_Other__c</fullName>
    <label>Cause for Delayed Return - Other</label>
    <length>2000</length>
    <type>LongTextArea</type>
</CustomField>