force-app/main/default/objects/Animal__c/fields/Charge_Animal__c.field-meta.xml
<CustomField>
    <fullName>Charge_Animal__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Charge Animal</label>
    <type>Checkbox</type>
</CustomField>