force-app/main/default/objects/Animal__c/fields/Color__c.field-meta.xml
<CustomField>
    <fullName>Color__c</fullName>
    <defaultValue>&quot;Unspecified&quot;</defaultValue>
    <label>Primary Color</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Type_of_Animal__c</controllingField>
        <restricted>true</restricted>
        <valueSetName>Primary_Color</valueSetName>
    </valueSet>
</CustomField>