force-app/main/default/objects/Animal__c/fields/Color_Handling_Code_Reason__c.field-meta.xml
<CustomField>
    <fullName>Color_Handling_Code_Reason__c</fullName>
    <label>Color Handling Code Reason</label>
    <type>TextArea</type>
</CustomField>