force-app/main/default/objects/Animal__c/fields/Confirmed_Helper_Dog__c.field-meta.xml
<CustomField>
    <fullName>Confirmed_Helper_Dog__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Selection if an Animal is designated as a Helper Dog</description>
    <inlineHelpText>Click this if this Animal is confirmed as a Helper Dog.</inlineHelpText>
    <label>Confirmed Helper Dog</label>
    <type>Checkbox</type>
</CustomField>