force-app/main/default/objects/Animal__c/fields/Controlled_Food_Program__c.field-meta.xml
<CustomField>
    <fullName>Controlled_Food_Program__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Controlled Food Program</label>
    <type>Checkbox</type>
</CustomField>