force-app/main/default/objects/Animal__c/fields/Count_of_Exam_Sheets__c.field-meta.xml
<CustomField>
    <fullName>Count_of_Exam_Sheets__c</fullName>
    <label>Count of Exam Sheets</label>
    <summaryForeignKey>Animal_Exam_Sheet__c.Animal__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>