force-app/main/default/objects/Animal__c/fields/CRC_ID__c.field-meta.xml
<CustomField>
    <fullName>CRC_ID__c</fullName>
    <label>CRC ID</label>
    <length>100</length>
    <type>Text</type>
</CustomField>