force-app/main/default/objects/Animal__c/fields/Current_Animal_Age_Estimate__c.field-meta.xml
<CustomField>
    <fullName>Current_Animal_Age_Estimate__c</fullName>
    <formula>(TODAY() - Estimated_Date_of_Birth__c) / 365</formula>
    <label>Current Animal Age (Estimate)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>